Fix dialog z-index

--- a/cards-frontend/src/app/shared/components/confirm-dialog/confirm-dialog.component.scss
+++ b/cards-frontend/src/app/shared/components/confirm-dialog/confirm-dialog.component.scss
@@ -9,6 +9,7 @@
   justify-content: center;
   backdrop-filter: blur(3px);
   background: $backdrop;
+  z-index: 1000000;
 }
 
 .dialog-container {
